curve bevel and extrude issue #36747

Closed
opened 2013-09-17 11:20:34 +02:00 by Alexander N. · 5 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit,

- Blender version with error, and version that worked ---

all tested versions blender-2.63a ... til now

- Short description of error ---

setting bevel and/or extrude to an open non-cyclic curve, where its start and endpoint touching each other, will leave a well visible gap.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open attached blend file
  2. you will see a gap in bevel and extrusion - even start and end point touches each other perfectly (it is an open, non-cyclic curve!)
    (optional watch the attached video)

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, - Blender version with error, and version that worked --- all tested versions blender-2.63a ... til now - Short description of error --- setting bevel and/or extrude to an open non-cyclic curve, where its start and endpoint touching each other, will leave a well visible gap. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open attached blend file 2. you will see a gap in bevel and extrusion - even start and end point touches each other perfectly (it is an open, non-cyclic curve!) (optional watch the attached video) %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%i noticed, when you turn all curve handles to type "vector", you can see that the bevel will not reach the end of curve, it stops at the second last curve point.%%%

%%%i noticed, when you turn all curve handles to type "vector", you can see that the bevel will not reach the end of curve, it stops at the second last curve point.%%%

%%%Yeah, looks like bevel does not use last segment of "computed" polyline…%%%

%%%Yeah, looks like bevel does not use last segment of "computed" polyline…%%%

%%%Fixed in svn rev60193. Thanks for the report, closing.%%%

%%%Fixed in svn rev60193. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36747
No description provided.