Fix #36747: curve bevel and extrude issue

Was a small mistake in bevel list optimization,
no need to check whether first/last points are
the same coord if curve is not cyclic.